[package]
name = "file-storage-server"
version = "0.1.0"
authors = ["KonstmarNSK <konstmar@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.104"
serde_json = "1.0.44"
